--- a/index.Rmd
+++ b/index.Rmd
@@ -1,14 +1,14 @@
 ---
 title: "R Markdown and Leaflet Assignment"
 author: "Javier Angoy"
-date: "November 8, 2017"
+date: "November 7, 2017"
 output: html_document
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-111 wifi spots from Rivas-Vaciamadrid (Spain).
-Data comes from [here](http://datosabiertos.rivasciudad.es/dataset/7a798103-d529-42ed-8946-7edd4d10c7f5/resource/92e323c7-3507-4097-bd58-ce8e61750690/download/antenaswifi.csv).
+Location of 111 wifi spots in Rivas-Vaciamadrid (Spain).
+Data comes from [here](http://datosabiertos.rivasciudad.es/dataset/7a798103-d529-42ed-8946-7edd4d10c7f5/resource/92e323c7-3507-4097-bd58-ce8e61750690/download/antenaswifi.csv). Signal Strenght is ficticious :-)
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(leaflet)
@@ -19,6 +19,7 @@ if(!file.exists("./data")){
     download.file(fUrl, destfile = "./data/antenaswifi.csv", method = "auto")
 }
 data = read.csv("./data/antenaswifi.csv",na.strings = c("","NA"))
+strength <- round(runif(111,min = -100,max = -30),5)
 
 wfIcon <- makeIcon(
   iconUrl = "http://simpleicon.com/wp-content/uploads/wifi1.png",
@@ -27,9 +28,9 @@ wfIcon <- makeIcon(
 )
 df <- data.frame(lat = data$LAT,
                  lng = data$LON,
-                 pop = data$DIRECCION)
+                 pop = paste(data$DIRECCION,"<br>","Signal Strenght:",strength,"dBm",sep=" "))
 df %>% 
   leaflet() %>%
-  addTiles() %>%
+  addTiles(attribution="http://datosabiertos.rivasciudad.es/dataset/7a798103-d529-42ed-8946-7edd4d10c7f5/resource/92e323c7-3507-4097-bd58-ce8e61750690/download/antenaswifi.csv") %>%
   addMarkers(icon = wfIcon,popup=df$pop,clusterOptions = markerClusterOptions())
 ```
